color, some alignment, correct quotes

--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
-
+body{
+  background-color: #9191E9;
+}
 
 /*NAV BAR*/
 
 .navbar {
   display: block;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  text-align: center;
 }
 
 .dropbtn {
@@ -20,6 +26,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    margin-left: 10px;
 }
 
 .dropdown-content {
@@ -53,6 +60,11 @@
 
 /*IMAGE*/
 
+#mainpic {
+  text-align: center;
+  margin: 0 auto;
+}
+
 /*****************************************/
 
 /*QUOTES*/
@@ -65,6 +77,7 @@
 .cust-quotes blockquote {
   position: absolute;
   bottom: 0px;
+  top: 50px;
   left: 0px;
   right: 0px;
   font-size: 14px;
@@ -92,7 +105,8 @@
 .cust-quotes blockquote p{
   font-size:24px;
   font-weight:normal;
-  font-style:italic;
+  /*font-style:italic;*/
+  font-family: 'Roboto Slab', serif;
   color:#353535;
   line-height: 30px;
   margin-bottom: 10px;
@@ -105,8 +119,9 @@
 }
 .cust-quotes blockquote cite {
     text-align: center;
+    font-family: 'Roboto Slab', serif;
     font-size: 14px;
-    color: white;
+    color: #d2caca;
 }
 .cust-quotes blockquote cite a {
   font-size:14px;
@@ -121,6 +136,8 @@ margin:0 auto;
 }
 
 #testimonials {
+  text-align: center;
+  display: block;
   margin:0 auto;
   width:940px;
 
